--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,13 @@
 version: '2'
 services:
-    test:
-        image: test
-        container_name: test
-        environment:
-            - TZ=Europe/Brussels
+    pimon:
+        build: .
+        container_name: pimon
         volumes:
-            - /sys/devices/virtual/thermal/thermal_zone0:/host/thermal:ro
-            - /sys/devices/system/cpu/cpu0/cpufreq:/host/cpufreq:ro
+            - /sys:/hostsys:ro
         ports:
-            - 8081:8081/tcp
+            - 8080:8080/tcp
         devices:
             - "/dev/gpiomem:/dev/gpiomem"
-        command: --port 8081 --debug
+        command: --debug
 
