--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,5 @@ services:
             - 8080:8080/tcp
         devices:
             - "/dev/gpiomem:/dev/gpiomem"
-        command: --debug
+        command: --debug --wait 2
 
