--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,9 @@ services:
         build: .
         container_name: pimon
         volumes:
-            - /sys:/hostsys:ro
+            - /sys:/host/sys:ro
         ports:
-            - 8080:8080/tcp
+            - "8080:8080/tcp"
         devices:
             - "/dev/gpiomem:/dev/gpiomem"
-        command: --debug --wait 2
 
