--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,8 @@ verify_ssl = true
 
 [packages]
 prometheus-client = "==0.7.1"
-rpi-gpio = "*"
+#rpi-gpio = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.7"
