--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,9 @@ stages:
       - "Dockerfile*"
       - .gitlab-ci.yml
   before_script:
+    - export VERSION=$(grep -i ^version version.py | awk '{ print $3 }' | tr -d \");
     - if [[ $CI_COMMIT_REF_NAME == "master" ]]; then
-         export TAG=$(grep -i ^version version.py | awk '{ print $3 }' | tr -d \");
+         export TAG=$VERSION
       elif [[ $CI_COMMIT_REF_NAME == "release-$VERSION" ]]; then
          export TAG="dev-VERSION";
       else
