--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ stages:
   before_script:
     - export VERSION=$(grep -i ^version version.py | awk '{ print $3 }' | tr -d \");
     - if [[ $CI_COMMIT_REF_NAME == "master" ]]; then
-         export TAG=$VERSION
+         export TAG=$VERSION;
       elif [[ $CI_COMMIT_REF_NAME == "release-$VERSION" ]]; then
          export TAG="dev-VERSION";
       else
