--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,8 @@ stages:
       - .gitlab-ci.yml
   before_script:
     - export VERSION=$(grep -i ^version version.py | awk '{ print $3 }' | tr -d \");
+    - echo $VERSION
+    - echo $CI_COMMIT_REF_NAME
     - if [[ $CI_COMMIT_REF_NAME == "master" ]]; then
          export TAG=$VERSION;
       elif [[ $CI_COMMIT_REF_NAME == "release-$VERSION" ]]; then
@@ -28,6 +30,7 @@ stages:
       else
          export TAG="dev";
       fi
+    - echo $TAG
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
     - export CI_PROJECT_PATH=$(echo $CI_PROJECT_PATH | tr "[:upper:]" "[:lower:]")
 
