--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,6 +77,7 @@ arm:
 github:
   # FIXME: what's a suitable (light) image for this?
   image: python:3.7-alpine
+  stage: release
   only:
     refs:
       - master
