--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,7 @@ arm:
     - docker push "$CI_PROJECT_PATH":"$TAG"
     - if [[ $CI_COMMIT_REF_NAME == "master" ]]; then
         docker tag "$CI_PROJECT_PATH":"$TAG"  "$CI_PROJECT_PATH":latest;
-        docker push "$CI_PROJECT_PATH":latest
+        docker push "$CI_PROJECT_PATH":latest;
       fi
 
 github:
