--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,21 @@ stages:
   - build
   - release
 
-.common_build:
+.test_only:
+  only:
+    changes:
+      - "*.py"
+      - "metrics/*.py"
+
+.build_only:
+  only:
+    changes:
+      - "*.py"
+      - "metrics/*.py"
+      - "Dockerfile*"
+      - .gitlab-ci.yml
+
+.docker_build:
   # using 17.12: stable doesn't work on RPI (can't connect to docker socket)
   image: docker:17.12
   services:
@@ -13,13 +27,9 @@ stages:
     DOCKER_CLI_EXPERIMENTAL: enabled
   except:
     - tags
-  only:
-    changes:
-      - "*.py"
-      - "metrics/*.py"
-      - "Dockerfile*"
-      - .gitlab-ci.yml
+  extends: .build_only
   before_script:
+    # TODO: wrap TAG logic in a script and call that when needed?
     - export VERSION=$(grep -i ^version version.py | awk '{ print $3 }' | tr -d \');
     - if [[ $CI_COMMIT_REF_NAME == "master" ]]; then
          export TAG=$VERSION;
@@ -31,15 +41,17 @@ stages:
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
     - export CI_PROJECT_PATH=$(echo $CI_PROJECT_PATH | tr "[:upper:]" "[:lower:]")
 
-.common_release:
-  extends: .common_build
+.docker_build_stable:
+  extends: .docker_build
+  # and since 'docker manifest' doesn't work on RPI on 17.12, we'll use stable for that
   image: docker:stable
   services:
     - docker:stable-dind
 
 flake8:
-  image: python:3.7-alpine
   stage: test
+  extends: .test_only
+  image: python:3.7-alpine
   before_script:
     - python -m venv venv
     - source venv/bin/activate
@@ -48,8 +60,8 @@ flake8:
     - flake8 --max-line-length 120 *.py metric/*.py
 
 pytest:
-  image: python:3.7-alpine
   stage: test
+  image: python:3.7-alpine
   before_script:
     - python -m venv venv
     - source venv/bin/activate
@@ -58,9 +70,9 @@ pytest:
   script:
     - cd tests && pytest
 
-arm:
-  extends: .common_build
+build_arm:
   stage: build
+  extends: .docker_build
   tags:
     - docker
     - arm
@@ -70,20 +82,29 @@ arm:
                    --build-arg BASE_IMAGE=arm32v7/python:3.7-alpine
                    -t "$CI_PROJECT_PATH":"$TAG" .
     - docker push "$CI_PROJECT_PATH":"$TAG"
-    - if [[ $CI_COMMIT_REF_NAME == "master" ]]; then
-        docker tag "$CI_PROJECT_PATH":"$TAG"  "$CI_PROJECT_PATH":latest;
-        docker push "$CI_PROJECT_PATH":latest;
-      fi
+
+# smoke test goes here
+
+publish:
+  stage: release
+  extends: .docker_build
+  tags:
+    - docker
+    - shared
+  only:
+    - master
+  script:
+    - docker tag "$CI_PROJECT_PATH":"$TAG"  "$CI_PROJECT_PATH":latest
+    - docker push "$CI_PROJECT_PATH":latest
 
 github:
   # FIXME: what's a suitable (light) image for this?
-  image: python:3.7-alpine
   stage: release
   only:
-    refs:
-      - master
+    - master
+  before_script:
+    - export TAG=$(grep -i ^version version.py | awk '{ print $3 }' | tr -d \');
   script:
-    - apk add git
     - git remote set-url origin "https://$GITHUB_USER:$GITHUB_TOKEN@github.com/$CI_PROJECT_PATH.git"
     - git tag $TAG
     - git push --tags
