--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,8 @@ stages:
     changes:
       - "*.py"
       - "metrics/*.py"
+  except:
+    - tags
 
 .build_only:
   only:
@@ -16,7 +18,9 @@ stages:
       - "*.py"
       - "metrics/*.py"
       - "Dockerfile*"
-#     - .gitlab-ci.yml
+      - .gitlab-ci.yml
+  except:
+    - tags
 
 .docker:
   image: docker:stable
@@ -25,10 +29,9 @@ stages:
   variables:
     DOCKER_DRIVER: overlay2
     DOCKER_CLI_EXPERIMENTAL: enabled
-  except:
-    - tags
   tags:
     - docker
+    - shared
   before_script:
     # TODO: wrap TAG logic in a script and call that when needed?
     - export VERSION=$(grep -i ^version version.py | awk '{ print $3 }' | tr -d \');
@@ -42,7 +45,7 @@ stages:
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
     - export CI_PROJECT_PATH=$(echo $CI_PROJECT_PATH | tr "[:upper:]" "[:lower:]")
 
-.docker_rpi:
+.docker_arm:
   extends: .docker
   # using 17.12: stable doesn't work on RPI (can't connect to docker socket)
   # note: 'docker manifest' doesn't work on RPI on 17.12.  so we use stable for
@@ -80,7 +83,7 @@ pytest:
 build_arm:
   stage: build
   extends:
-    - .docker_rpi
+    - .docker_arm
     - .build_only
   script:
     - docker build --pull
@@ -92,7 +95,7 @@ build_arm:
 test_arm:
   stage : smoke
   extends:
-    - .docker_rpi
+    - .docker_arm
     - .build_only
   script:
     - docker run -v $(pwd)/tests:/app/tests "$CI_PROJECT_PATH":"$TAG" --once --stub --debug
