--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -97,6 +97,10 @@ test_arm:
   extends:
     - .docker_arm
     - .build_only
+  tags:
+    - docker
+    - arm
+    - rpi
   script:
     - docker run -v $(pwd)/tests:/app/tests "$CI_PROJECT_PATH":"$TAG" --once --stub --debug
 
