--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,7 +108,8 @@ publish:
   stage: release
   extends: .docker
   only:
-    - master
+    refs:
+      - master
   script:
     - docker tag "$CI_PROJECT_PATH":"$TAG"  "$CI_PROJECT_PATH":latest
     - docker push "$CI_PROJECT_PATH":latest
