--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,16 +92,13 @@ build_arm:
     - .build_only
   script:
     - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-    - docker build --pull
-                   --cache-from "$CI_PROJECT_PATH":"$TAG"
-                   --build-arg BASE_IMAGE=arm32v7/python:3.7-alpine
-                   -t "$CI_PROJECT_PATH":"$TAG" .
+    - docker build --pull -t "$CI_PROJECT_PATH":"$TAG" .
     - docker push "$CI_PROJECT_PATH":"$TAG"
 
 test_arm:
   stage : smoke
   extends:
-    - .docker_arm
+    - .docker
     - .build_only
   tags:
     - docker
