--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,9 @@ stages:
   variables:
     DOCKER_DRIVER: overlay2
     DOCKER_HOST: tcp://docker:2376
-    DOCKER_TLS_CERTDIR: ""
+    DOCKER_TLS_VERIFY: 0
+    DOCKER_TLS_CERTDIR: "/certs"
+    DOCKER_CERT_PATH: "/certs/client"
     DOCKER_CLI_EXPERIMENTAL: enabled
   tags:
     - docker
