--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,13 +23,15 @@ stages:
     - tags
 
 .docker:
-  image: docker:stable
+  # docker:stable (19.03.6) sometimes hangs
+  # https://gitlab.com/gitlab-com/support-forum/issues/5202
+  image: docker:19.03.5
   services:
-    - docker:stable-dind
+    - docker:19.03.5-dind
   variables:
     DOCKER_DRIVER: overlay2
     DOCKER_HOST: tcp://docker:2376
-    DOCKER_TLS_VERIFY: 0
+    DOCKER_TLS_VERIFY: 1
     DOCKER_TLS_CERTDIR: "/certs"
     DOCKER_CERT_PATH: "/certs/client"
     DOCKER_CLI_EXPERIMENTAL: enabled
