--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,11 +93,11 @@ prometheus:
     - apk add curl
   script:
     - python pimon.py --port 8080 --stub &
-    - PINGPID=$!
+    - PIMONPID=$!
     - sleep 2
     - curl -s localhost:8080/metric | grep '^pimon_clockspeed '
     - curl -s localhost:8080/metric | grep '^pimon_temperature '
-    - kill $PINGPID
+    - kill $PIMONPID
 
 build_arm:
   stage: build
