--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,8 @@ stages:
     changes:
       - "*.py"
       - "metrics/*.py"
+      - "tests/*.py"
+      - .gitlab-ci.yml
   except:
     - tags
 
@@ -61,10 +63,8 @@ stages:
 flake8:
   stage: test
   extends: .test_only
-  image: python:3.7-alpine
+  image: python:3.7
   before_script:
-    - python -m venv venv
-    - source venv/bin/activate
     - pip install -U flake8
   script:
     - flake8 --max-line-length 120 *.py metric/*.py
@@ -72,34 +72,29 @@ flake8:
 pytest:
   stage: test
   extends: .test_only
-  image: python:3.7-alpine
+  image: python:3.7
   before_script:
-    - python -m venv venv
-    - source venv/bin/activate
-    - pip install pipenv pytest-cov
+    - pip install pipenv
     - pipenv install
   script:
-    - cd tests && pytest --cov=../
-  after_script:
-    - bash <(curl -s https://codecov.io/bash) -t "${CODECOV_TOKEN}"
+    - cd tests && pipenv run pytest
+  #after_script:
+  #  - bash <(curl -s https://codecov.io/bash) -t "${CODECOV_TOKEN}"
 
 prometheus:
   stage: test
   extends: .test_only
-  image: python:3.7-alpine
+  image: python:3.7
   before_script:
-    - python -m venv venv
-    - source venv/bin/activate
     - pip install pipenv
     - pipenv install
-    - apk add curl
   script:
-    - python pimon.py --port 8080 --stub &
-    - PINGPID=$!
+    - pipenv run python pimon.py --port 8080 --stub &
+    - TESTPID=$!
     - sleep 2
     - curl -s localhost:8080/metric | grep '^pimon_clockspeed '
     - curl -s localhost:8080/metric | grep '^pimon_temperature '
-    - kill $PINGPID
+    - kill $TESTPID
 
 build_arm:
   stage: build
