--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,7 +65,8 @@ flake8:
   extends: .test_only
   image: python:3.7
   before_script:
-    - pip install -U flake8
+    - pip install pipenv
+    - pipenv install --dev
   script:
     - flake8 --max-line-length 120 *.py metric/*.py
 
@@ -74,8 +75,8 @@ pytest:
   extends: .test_only
   image: python:3.7
   before_script:
-    - pip install pipenv --dev
-    - pipenv install
+    - pip install pipenv
+    - pipenv install --dev
   script:
     - cd tests && pipenv run pytest
   after_script:
