--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,6 +122,7 @@ publish:
     refs:
       - master
   script:
+    - docker pull "$CI_PROJECT_PATH":"$TAG"
     - docker tag "$CI_PROJECT_PATH":"$TAG"  "$CI_PROJECT_PATH":latest
     - docker push "$CI_PROJECT_PATH":latest
 
