--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ stages:
   only:
     changes:
       - "*.py"
+      - "pimon/*.py"
       - "metrics/*.py"
       - "tests/*.py"
       - .gitlab-ci.yml
@@ -18,6 +19,7 @@ stages:
   only:
     changes:
       - "*.py"
+      - "pimon/*.py"
       - "metrics/*.py"
       - "Dockerfile*"
       - .gitlab-ci.yml
@@ -27,9 +29,11 @@ stages:
 .docker:
   # docker:stable (19.03.6) sometimes hangs
   # https://gitlab.com/gitlab-com/support-forum/issues/5202
-  image: docker:19.03.5
+  #image: docker:19.03.5
+  image: docker:stable
   services:
-    - docker:19.03.5-dind
+    - docker:stable-dind
+    #- docker:19.03.5-dind
   variables:
     DOCKER_DRIVER: overlay2
     DOCKER_HOST: tcp://docker:2376
