--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,6 @@ stages:
     changes:
       - "*.py"
       - "pimon/*.py"
-      - "metrics/*.py"
       - "tests/*.py"
       - .gitlab-ci.yml
   except:
@@ -20,7 +19,6 @@ stages:
     changes:
       - "*.py"
       - "pimon/*.py"
-      - "metrics/*.py"
       - "Dockerfile*"
       - .gitlab-ci.yml
   except:
@@ -67,7 +65,7 @@ flake8:
     - pip install pipenv
     - pipenv install --dev
   script:
-    - pipenv run flake8 --max-line-length 120 *.py metric/*.py
+    - pipenv run flake8 --max-line-length 120 *.py pimon/*.py
 
 pytest:
   stage: test
