Share metrics code via PyPi

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,7 +87,7 @@ prometheus:
     - pip install pipenv
     - pipenv install
   script:
-    - pipenv run python main.py --port 8080 --stub --debug --interval 1 &
+    - pipenv run pimon.py --port 8080 --stub --debug --interval 1 &
     - TESTPID=$!
     - sleep 5
     - curl -s localhost:8080/metric | grep '^pimon_clockspeed '
