--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,6 @@ stages:
       - "*.py"
       - "pimon/*.py"
       - "tests/*.py"
-      - .gitlab-ci.yml
   except:
     - tags
 
@@ -39,7 +38,7 @@ stages:
     - docker
     - shared
   before_script:
-    - export VERSION=$(grep -i ^version version.py | awk '{ print $3 }' | tr -d \');
+    - export VERSION=$(grep -i ^version pimon/version.py | awk '{ print $3 }' | tr -d \');
     - if [[ $CI_COMMIT_REF_NAME == "master" ]]; then
          export TAG=$VERSION;
       elif [[ $CI_COMMIT_REF_NAME == "release-$VERSION" ]]; then
