--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,6 +70,9 @@ pytest:
   stage: test
   extends: .test_only
   image: python:3.7
+  variables:
+    # workaround for https://github.com/pypa/pipenv/issues/4188
+    - PIPENV_PYUP_API_KEY: ""
   before_script:
     - pip install pipenv
     - pipenv install --dev
