--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
 
 .test_only:
   rules:
-    # should we add "- if: '$CI_COMMIT_TAG == null'" ???
+    - if: '$CI_COMMIT_TAG == null'
     - changes:
         - "*.py"
         - "pimon/*.py"
@@ -15,7 +15,7 @@ stages:
 
 .build_only:
   rules:
-    # should we add "- if: '$CI_COMMIT_TAG == null'" ???
+    - if: '$CI_COMMIT_TAG == null'
     - changes:
         - "*.py"
         - "pimon/*.py"
