--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,15 @@ stages:
   - smoke
   - release
 
+# Don't run for new tags
+workflow:
+  rules:
+    - if: $CI_COMMIT_TAG
+      when: never
+    - when: always
+
 .test_only:
   rules:
-    - if: '$CI_COMMIT_TAG == null'
     - changes:
         - "*.py"
         - "pimon/*.py"
@@ -15,7 +21,6 @@ stages:
 
 .build_only:
   rules:
-    - if: '$CI_COMMIT_TAG == null'
     - changes:
         - "*.py"
         - "pimon/*.py"
