--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,9 +125,8 @@ test_arm:
 publish:
   stage: release
   extends: .docker
-  only:
-    refs:
-      - master
+  rules:
+    - if: $CI_COMMIT_BRANCH == "master"
   script:
     - docker pull "$CI_PROJECT_PATH":"$TAG"
     - docker tag "$CI_PROJECT_PATH":"$TAG"  "$CI_PROJECT_PATH":latest
@@ -135,9 +134,8 @@ publish:
 
 github:
   stage: release
-  only:
-    refs:
-      - master
+  rules:
+    - if: $CI_COMMIT_BRANCH == "master"
   before_script:
     - export VERSION=$(grep -i ^version pimon/version.py | awk '{ print $3 }' | tr -d \');
   script:
