--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,9 +43,9 @@ workflow:
     - shared
   before_script:
     - export VERSION=$(grep -i ^version libpimon/version.py | awk '{ print $3 }' | tr -d \');
-    - if [[ $CI_COMMIT_REF_NAME == "master" ]]; then
+    - if [[ $CI_COMMIT_BRANCH == "master" ]]; then
          export TAG=$VERSION;
-      elif [[ $CI_COMMIT_REF_NAME == "release-$VERSION" ]]; then
+      elif [[ $CI_COMMIT_BRANCH == "release-$VERSION" ]]; then
          export TAG="dev-$VERSION";
       else
          export TAG="dev";
@@ -110,9 +110,9 @@ build_arm:
     - .build_only
   script:
     - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-    - docker pull "$CI_PROJECT_PATH":"$TAG" || true
-    - docker build --cache-from $CI_PROJECT_PATH:$TAG --pull -t "$CI_PROJECT_PATH":"$TAG" .
-    - docker push "$CI_PROJECT_PATH":"$TAG"
+    - docker pull "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA" || true
+    - docker build --cache-from $CI_PROJECT_PATH:$TAG --pull -t "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA" .
+    - docker push "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA"
 
 test_arm:
   stage : smoke
@@ -120,16 +120,24 @@ test_arm:
     - .docker_arm
     - .build_only
   script:
-    - docker run -v $(pwd)/tests:/app/tests "$CI_PROJECT_PATH":"$TAG" --once --stub --debug --monitor-fan=False
+    - docker run -v $(pwd)/tests:/app/tests "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA" --once --stub --debug --monitor-fan=False
 
-publish:
+publish_tagged:
+  stage: release
+  extends: .docker
+  script:
+    - docker pull "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA"
+    - docker tag "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA" "$CI_PROJECT_PATH":$TAG
+    - docker push "$CI_PROJECT_PATH":$TAG
+
+publish_latest:
   stage: release
   extends: .docker
   rules:
     - if: $CI_COMMIT_BRANCH == "master"
   script:
-    - docker pull "$CI_PROJECT_PATH":"$TAG"
-    - docker tag "$CI_PROJECT_PATH":"$TAG"  "$CI_PROJECT_PATH":latest
+    - docker pull "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA"
+    - docker tag "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA" "$CI_PROJECT_PATH":latest;
     - docker push "$CI_PROJECT_PATH":latest
 
 github:
