--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -110,7 +110,7 @@ build_arm:
     - .build_only
   script:
     - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-    - docker pull "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA" || true
+    - docker pull "$CI_PROJECT_PATH":"$TAG" || true
     - docker build --cache-from $CI_PROJECT_PATH:$TAG --pull -t "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA" .
     - docker push "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA"
 
