--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - pretest
   - test
   - build
   - smoke
@@ -59,6 +60,16 @@ workflow:
     - docker
     - arm
     - rpi
+
+pretest:
+  stage: pretest
+  extends: .docker_arm
+  script:
+    - docker pull clambin/pimon:dev
+    - docker run -v $(pwd)/tests:/app/tests -p 8080:8080 -n pimon --rm clambin/pimon:dev --once --debug --monitor-fan=False
+    - sleep 5
+    - netstat -an
+    - docker stop pimon
 
 flake8:
   stage: test
