--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,7 @@
 stages:
-  - pretest
-  - test
+  - unittest
   - build
-  - smoke
+  - qa
   - release
 
 # Don't run for new tags
@@ -46,8 +45,6 @@ workflow:
     - export VERSION=$(grep -i ^version libpimon/version.py | awk '{ print $3 }' | tr -d \');
     - if [[ $CI_COMMIT_BRANCH == "master" ]]; then
          export TAG=$VERSION;
-      elif [[ $CI_COMMIT_BRANCH == "release-$VERSION" ]]; then
-         export TAG="dev-$VERSION";
       else
          export TAG="dev";
       fi
@@ -61,19 +58,8 @@ workflow:
     - arm
     - rpi
 
-pretest:
-  stage: pretest
-  extends: .docker_arm
-  script:
-    - apk add --update curl && rm -rf /var/cache/apk/*
-    - docker pull clambin/pimon:dev
-    - docker run -v $(pwd)/tests:/app/tests -p 8080:8080 --name pimon --rm -d clambin/pimon:dev --debug --monitor-fan=False
-    - sleep 5
-    - curl -s docker:8080/metric
-    - docker stop pimon
-
 flake8:
-  stage: test
+  stage: unittest
   extends: .test_only
   image: python:3.7
   before_script:
@@ -83,7 +69,7 @@ flake8:
     - pipenv run flake8 --max-line-length 120 *.py libpimon/*.py
 
 pytest:
-  stage: test
+  stage: unittest
   extends: .test_only
   image: python:3.7
   variables:
@@ -112,12 +98,19 @@ build_arm:
     - docker push "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA"
 
 test_arm:
-  stage : smoke
+  stage : qa
   extends:
     - .docker_arm
     - .build_only
   script:
-    - docker run -v $(pwd)/tests:/app/tests "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA" --once --stub --debug --monitor-fan=False
+    - apk add --update curl
+    - docker pull "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA"
+    - docker run -v $(pwd)/tests:/app/tests -p 8080:8080 --name pimon --rm -d "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA" --debug --monitor-fan=False
+    - sleep 5
+    - curl -s docker:8080/metric | grep '^pimon_clockspeed '
+    - curl -s docker:8080/metric | grep '^pimon_pimon_temperature '
+    - docker stop pimon
+
 
 publish:
   stage: release
