--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -116,11 +116,9 @@ publish:
   stage: release
   extends: .docker
   script:
-    - docker pull "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA"
     - docker tag "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA" "$CI_PROJECT_PATH":$TAG
     - docker push "$CI_PROJECT_PATH":$TAG
-    - if [[ "$CI_COMMIT_BRANCH" == "master" ]; then
-        docker pull "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA";
+    - if [[ "$CI_COMMIT_BRANCH" == "master" ]]; then
         docker tag "$CI_PROJECT_PATH":"$CI_COMMIT_SHORT_SHA" "$CI_PROJECT_PATH":latest;
         docker push "$CI_PROJECT_PATH":latest;
       fi
