--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,11 +41,6 @@ workflow:
     - docker
     - shared
   before_script:
-    - if [[ $CI_COMMIT_BRANCH == "master" ]]; then
-         export TAG=$(grep -i ^version libpimon/version.py | awk '{ print $3 }' | tr -d \');
-      else
-         export TAG="dev";
-      fi
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USER" --password-stdin
     - export CI_PROJECT_PATH=$(echo $CI_PROJECT_PATH | tr "[:upper:]" "[:lower:]")
 
@@ -91,9 +86,9 @@ build_arm:
     - .build_only
   script:
     - docker run --rm --privileged multiarch/qemu-user-static:register --reset
-    - docker pull $CI_PROJECT_PATH:$TAG || true
-    - docker build --cache-from $CI_PROJECT_PATH:$TAG --pull -t $CI_PROJECT_PATH:$TAG .
-    - docker push $CI_PROJECT_PATH:$TAG
+    - docker pull $CI_PROJECT_PATH:build || true
+    - docker build --cache-from $CI_PROJECT_PATH:build --pull -t $CI_PROJECT_PATH:build .
+    - docker push $CI_PROJECT_PATH:build
 
 test_arm:
   stage : qa
@@ -102,23 +97,33 @@ test_arm:
     - .build_only
   script:
     - apk add --update curl
-    - docker pull $CI_PROJECT_PATH:$TAG
-    - docker run -v $(pwd)/tests:/app/tests -p 8080:8080 --name pimon --rm -d $CI_PROJECT_PATH:$TAG --debug --monitor-fan=False
+    - docker pull $CI_PROJECT_PATH:build
+    - docker run -v $(pwd)/tests:/app/tests -p 8080:8080 --name pimon --rm -d $CI_PROJECT_PATH:build --debug --monitor-fan=False
     - sleep 5
     - curl -s docker:8080/metric | grep '^pimon_clockspeed '
     - curl -s docker:8080/metric | grep '^pimon_temperature '
     - docker stop pimon
 
 
-publish:
+publish_nonmaster:
+  stage: release
+  extends: .docker
+  rules:
+    - if: $CI_COMMIT_BRANCH != "master"
+  script:
+    - docker tag $CI_PROJECT_PATH:build $CI_PROJECT_PATH:$CI_COMMIT_BRANCH
+    - docker push $CI_PROJECT_PATH:$CI_COMMIT_BRANCH
+
+publish_master:
   stage: release
   extends: .docker
   rules:
     - if: $CI_COMMIT_BRANCH == "master"
   script:
-    # TODO: use an interim build label and only tag dev/x.y/latest here
-    # so we only publish once QA passed
-    - docker tag $CI_PROJECT_PATH:$TAG $CI_PROJECT_PATH:latest
+    - VERSION=$(grep -i ^version libpimon/version.py | awk '{ print $3 }' | tr -d \');
+    - docker tag $CI_PROJECT_PATH:build $CI_PROJECT_PATH:$VERSION
+    - docker push $CI_PROJECT_PATH:$VERSION
+    - docker tag $CI_PROJECT_PATH:build $CI_PROJECT_PATH:latest
     - docker push $CI_PROJECT_PATH:latest
 
 github:
@@ -126,7 +131,7 @@ github:
   rules:
     - if: $CI_COMMIT_BRANCH == "master"
   before_script:
-    - export VERSION=$(grep -i ^version libpimon/version.py | awk '{ print $3 }' | tr -d \');
+    - VERSION=$(grep -i ^version libpimon/version.py | awk '{ print $3 }' | tr -d \');
   script:
     - git remote set-url origin "https://$GITHUB_USER:$GITHUB_TOKEN@github.com/$CI_PROJECT_PATH.git"
     - git tag $VERSION
