--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,6 +111,7 @@ publish_nonmaster:
   rules:
     - if: $CI_COMMIT_BRANCH != "master"
   script:
+    - docker pull $CI_PROJECT_PATH:build
     - docker tag $CI_PROJECT_PATH:build $CI_PROJECT_PATH:$CI_COMMIT_BRANCH
     - docker push $CI_PROJECT_PATH:$CI_COMMIT_BRANCH
 
@@ -121,6 +122,7 @@ publish_master:
     - if: $CI_COMMIT_BRANCH == "master"
   script:
     - VERSION=$(grep -i ^version libpimon/version.py | awk '{ print $3 }' | tr -d \');
+    - docker pull $CI_PROJECT_PATH:build
     - docker tag $CI_PROJECT_PATH:build $CI_PROJECT_PATH:$VERSION
     - docker push $CI_PROJECT_PATH:$VERSION
     - docker tag $CI_PROJECT_PATH:build $CI_PROJECT_PATH:latest
