--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,14 +65,12 @@ pytest:
   stage: unittest
   extends: .test_only
   image: python:3.7
-  variables:
-    # workaround for https://github.com/pypa/pipenv/issues/4188
-    PIPENV_PYUP_API_KEY: ""
   before_script:
     - pip install pipenv
     - pipenv install --dev
   script:
-    - pipenv check
+    # workaround for https://github.com/pypa/pipenv/issues/4188
+    - PIPENV_PYUP_API_KEY="" pipenv check
     - cd tests && pipenv run pytest --cov --junitxml=report.xml
     - pipenv run bash <(curl -s https://codecov.io/bash) -s tests
   artifacts:
