--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ workflow:
   rules:
     - changes:
         - "*.py"
-        - "libpimon/*.py"
+        - "src/*.py"
         - "tests/*.py"
         - "Pipfile*"
 
@@ -23,7 +23,7 @@ workflow:
   rules:
     - changes:
         - "*.py"
-        - "libpimon/*.py"
+        - "src/*.py"
         - "Pipfile*"
         - "Dockerfile*"
         - .gitlab-ci.yml
@@ -60,7 +60,7 @@ flake8:
   before_script:
     - pip install flake8
   script:
-    - flake8 --max-line-length 120 *.py libpimon/*.py
+    - flake8 --max-line-length 120 *.py src/*.py
 
 pytest:
   stage: unittest
@@ -91,7 +91,7 @@ sast:
   script:
     # workaround for https://github.com/pypa/pipenv/issues/4188
     #- PIPENV_PYUP_API_KEY="" pipenv check
-    - bandit -r libpimon/*.py
+    - bandit -r src/*.py
 
 build_arm:
   stage: build
@@ -135,7 +135,7 @@ publish_master:
   rules:
     - if: $CI_COMMIT_BRANCH == "master"
   script:
-    - VERSION=$(grep -i ^version libpimon/version.py | awk '{ print $3 }' | tr -d \');
+    - VERSION=$(grep -i ^version src/version.py | awk '{ print $3 }' | tr -d \');
     - docker pull $CI_PROJECT_PATH:build
     - docker tag $CI_PROJECT_PATH:build $CI_PROJECT_PATH:$VERSION
     - docker push $CI_PROJECT_PATH:$VERSION
@@ -147,7 +147,7 @@ github:
   rules:
     - if: $CI_COMMIT_BRANCH == "master"
   before_script:
-    - VERSION=$(grep -i ^version libpimon/version.py | awk '{ print $3 }' | tr -d \');
+    - VERSION=$(grep -i ^version src/version.py | awk '{ print $3 }' | tr -d \');
   script:
     - git remote set-url origin "https://$GITHUB_USER:$GITHUB_TOKEN@github.com/$CI_PROJECT_PATH.git"
     - git tag $VERSION
