--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -106,7 +106,7 @@ test_arm:
   script:
     - apk add --update curl
     - docker pull $CI_PROJECT_PATH:build
-    - docker run -v $(pwd)/tests:/app/tests -p 8080:8080 --name pimon --rm -d $CI_PROJECT_PATH:build --debug --monitor-fan=False
+    - docker run -v $(pwd)/tests:/app/tests -p 8080:8080 --name pimon --rm -d $CI_PROJECT_PATH:build --debug --fan=False
     - sleep 5
     - curl -s docker:8080/metric | grep '^pimon_clockspeed '
     - curl -s docker:8080/metric | grep '^pimon_temperature '
